Adds session max age flag to .env, bcrypt replaces md5

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 TIMEZONE=Asia/Kabul
+SESSION_MAX_AGE='+1 hour'
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
