--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "scripts": {
+        "swagger": "npx swagger-ui-serve ./api/swagger/petshop.json",
         "dev": "npm run development",
         "development": "mix",
         "watch": "mix watch",
